--- a/final-exam/src/pages/LandingPage/Header/Sidebar/styles.scss
+++ b/final-exam/src/pages/LandingPage/Header/Sidebar/styles.scss
@@ -8,7 +8,7 @@
   transform: translateX(-100%);
   background-color: rgba(0, 0, 0, 0.95);
   background-blend-mode: soft-light;
-  transition: transform 0.5s ease;
+  transition: transform 0.2s ease;
   position: fixed;
   padding: 32px;
   z-index: 10000;
