--- a/final-exam/src/pages/LandingPage/Navbar/styles.scss
+++ b/final-exam/src/pages/LandingPage/Navbar/styles.scss
@@ -6,6 +6,7 @@
   align-items: center;
 
   &__item {
+    margin-top: 8px;
     margin-left: 32px;
     font-family: 'Prata', serif;
     border-bottom: 1px transparent solid;
